--- a/css/styles.css
+++ b/css/styles.css
@@ -136,6 +136,10 @@ nav h1 a {
   margin: 0;
   padding: 30px 15px 60px;
   text-align: center;
+  /*lily Add*/
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:space-around;
 }
 #restaurants-list li {
   background-color: #fff;
