--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,7 @@ nav {
   height: 80px;
   background-color: #252831;
   text-align:center;
+  padding-top: 26px;
 }
 nav h1 {
   margin: auto;
@@ -106,8 +107,10 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  height: 80px; /*lily modified*/
   background-color: #3397DB;
+  display: flex;
+  flex-flow: row wrap;
   align-items: center;
 }
 .filter-options h2 {
@@ -115,7 +118,8 @@ nav h1 a {
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+  margin: 10px 20px;
+  padding-top: 8px; /* lily Add */
 }
 .filter-options select {
   background-color: white;
@@ -127,6 +131,12 @@ nav h1 a {
   margin: 10px;
   padding: 0 10px;
   width: 200px;
+}
+/*lily Add*/
+.select-list {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 /* ====================== Restaurant Listing ====================== */
@@ -262,7 +272,7 @@ nav h1 a {
 }
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
@@ -276,4 +286,99 @@ nav h1 a {
 }
 #restaurant-hours td {
   color: #666;
+}
+
+/* lily Add */
+@media screen and (min-width:333px) {
+
+  .filter-options h2 {
+    padding-top: 1px; /* lily Add */
+    margin: 0px 20px;
+  }
+
+  /*filter-options*/
+ 
+  .filter-options {
+    width: 100%;
+    height: 60px;
+    background-color: #3397DB;
+    align-items: center;
+}
+
+.select-list {
+  display: flex;
+  flex-wrap: column;
+  align-items: center;
+}
+
+  /*filter-options select*/
+    .filter-options select {
+      height: 20px;
+      margin: 10px;
+      padding: 0 10px;
+      width: 130px;
+}
+
+/*restaurants-list */
+#restaurants-list {
+  padding: 1px 10px 10px;
+}
+
+#restaurants-list li {
+  width: 250px;
+}
+
+/*restaurant-img*/
+.restaurant-img {
+  margin: 0;
+  max-width: 100%;
+  min-height: 100px;
+}
+}
+
+@media screen and (min-width:725px) {
+
+  .filter-options select {
+    width: 200px;
+  }
+  #restaurants-list {
+    margin: 0;
+    padding: 30px 15px 60px;
+    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:space-around;
+  }
+  #restaurants-list li {
+
+    margin: 15px;
+    min-height: 380px;
+    padding: 0 30px 25px;
+    text-align: left;
+    width: 270px;
+  }
+  #restaurants-list .restaurant-img {
+
+    min-height: 248px;
+    min-width: 100%;
+  }
+  #restaurants-list li h1 {
+
+    line-height: 1.3;
+    margin: 20px 0 10px;
+ 
+  }
+  #restaurants-list p {
+    margin: 0;
+    font-size: 11pt;
+  }
+  #restaurants-list li a {
+
+    margin: 15px 0 0;
+    padding: 8px 30px 10px;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+  }
+
 }
