--- a/css/styles.css
+++ b/css/styles.css
@@ -1,44 +1,74 @@
 @charset "utf-8";
 /* CSS Document */
 
-body,td,th,p{
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
-	color: #333;
-	line-height: 1.5;
+body,
+td,
+th,
+p {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 10pt;
+  color: #333;
+  line-height: 1.5;
 }
+
 body {
-	background-color: #fdfdfd;
-	margin: 0;
-	position:relative;
+  background-color: #fdfdfd;
+  margin: 0;
+  position: relative;
 }
-ul, li {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
-	color: #333;
+
+ul,
+li {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 10pt;
+  color: #333;
 }
+
 a {
-	color: orange;
-	text-decoration: none;
+  color: orange;
+  text-decoration: none;
 }
-a:hover, a:focus {
-	color: #3397db;
-	text-decoration: none;
+
+a:hover,
+a:focus {
+  color: #3397db;
+  text-decoration: none;
 }
-a img{
-	border: none 0px #fff;
+
+a img {
+  border: none 0px #fff;
 }
-h1, h2, h3, h4, h5, h6 {
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0 0 20px;
 }
-article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-	display: block;
+
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
+
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
 }
+
 #footer {
   background-color: #444;
   color: #aaa;
@@ -48,17 +78,20 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   text-align: center;
   text-transform: uppercase;
 }
+
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
   height: 80px;
   background-color: #252831;
-  text-align:center;
+  text-align: center;
   padding-top: 26px;
 }
+
 nav h1 {
   margin: auto;
 }
+
 nav h1 a {
   color: #fff;
   font-size: 14pt;
@@ -66,65 +99,72 @@ nav h1 a {
   letter-spacing: 10px;
   text-transform: uppercase;
 }
+
 #breadcrumb {
-    padding: 10px 40px 16px;
-    list-style: none;
-    background-color: #eee;
-    font-size: 17px;
-    margin: 0;
-    width: calc(50% - 80px);
+  padding: 10px 40px 16px;
+  list-style: none;
+  background-color: #eee;
+  font-size: 17px;
+  margin: 0;
+  width: calc(50% - 80px);
 }
 
 /* Display list items side by side */
 #breadcrumb li {
-    display: inline;
+  display: inline;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
 #breadcrumb li+li:before {
-    padding: 8px;
-    color: black;
-    content: "/\00a0";
+  padding: 8px;
+  color: black;
+  content: "/\00a0";
 }
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
-    text-decoration: none;
+  color: #0275d8;
+  text-decoration: none;
 }
 
 /* Add a color on mouse-over */
 #breadcrumb li a:hover {
-    color: #01447e;
-    text-decoration: underline;
+  color: #01447e;
+  text-decoration: underline;
 }
+
 /* ====================== Map ====================== */
 #map {
   height: 400px;
   width: 100%;
   background-color: #ccc;
 }
+
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 80px; /*lily modified*/
+  height: 80px;
+  /*lily modified*/
   background-color: #3397DB;
   display: flex;
   flex-flow: row wrap;
   align-items: center;
 }
+
 .filter-options h2 {
   color: white;
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
   margin: 10px 20px;
-  padding-top: 8px; /* lily Add */
+  padding-top: 8px;
+  /* lily Add */
 }
+
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
-  font-family: Arial,sans-serif;
+  font-family: Arial, sans-serif;
   font-size: 11pt;
   height: 35px;
   letter-spacing: 0;
@@ -132,6 +172,7 @@ nav h1 a {
   padding: 0 10px;
   width: 200px;
 }
+
 /*lily Add*/
 .select-list {
   display: flex;
@@ -149,29 +190,32 @@ nav h1 a {
   /*lily Add*/
   display: flex;
   flex-wrap: wrap;
-  justify-content:space-around;
+  justify-content: space-around;
 }
+
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
-  font-family: Arial,sans-serif;
+  font-family: Arial, sans-serif;
   margin: 15px;
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
   width: 270px;
 }
+
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
-  margin: 0;
+  margin:10px 10px 0px 0px;
   max-width: 100%;
   min-height: 248px;
   min-width: 100%;
 }
+
 #restaurants-list li h1 {
   color: #f18200;
-  font-family: Arial,sans-serif;
+  font-family: Arial, sans-serif;
   font-size: 14pt;
   font-weight: 200;
   letter-spacing: 0;
@@ -179,10 +223,12 @@ nav h1 a {
   margin: 20px 0 10px;
   text-transform: uppercase;
 }
+
 #restaurants-list p {
   margin: 0;
   font-size: 11pt;
 }
+
 #restaurants-list li a {
   background-color: orange;
   border-bottom: 3px solid #eee;
@@ -203,6 +249,7 @@ nav h1 a {
   width: 100%;
   z-index: 1000;
 }
+
 .inside #map-container {
   background: blue none repeat scroll 0 0;
   height: 87%;
@@ -211,19 +258,22 @@ nav h1 a {
   top: 80px;
   width: 50%;
 }
+
 .inside #map {
   background-color: #ccc;
   height: 100%;
   width: 100%;
 }
+
 .inside #footer {
   bottom: 0;
   position: absolute;
   width: 50%;
 }
+
 #restaurant-name {
   color: #f18200;
-  font-family: Arial,sans-serif;
+  font-family: Arial, sans-serif;
   font-size: 20pt;
   font-weight: 200;
   letter-spacing: 0;
@@ -231,13 +281,16 @@ nav h1 a {
   text-transform: uppercase;
   line-height: 1.1;
 }
+
 #restaurant-img {
-	width: 90%;
+  width: 90%;
 }
+
 #restaurant-address {
   font-size: 12pt;
   margin: 10px 0px;
 }
+
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
@@ -248,17 +301,21 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+  width: 90%;
 }
-#restaurant-container, #reviews-container {
+
+#restaurant-container,
+#reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 140px 40px 30px;
   width: 50%;
 }
+
 #reviews-container {
   padding: 30px 40px 80px;
 }
+
 #reviews-container h2 {
   color: #f58500;
   font-size: 24pt;
@@ -266,10 +323,12 @@ nav h1 a {
   letter-spacing: -1px;
   padding-bottom: 1pt;
 }
+
 #reviews-list {
   margin: 0;
   padding: 0;
 }
+
 #reviews-list li {
   background-color: #fff;
   border: 2px solid #f3f3f3;
@@ -281,104 +340,131 @@ nav h1 a {
   position: relative;
   width: 85%;
 }
+
 #reviews-list li p {
   margin: 0 0 10px;
 }
+
 #restaurant-hours td {
   color: #666;
 }
 
-/* lily Add */
+/* ====================== min-width:333px Lily Add====================== */
 @media screen and (min-width:333px) {
 
+  nav {
+    height: 50px;
+}
+
+nav h1 a {
+  font-size: 10pt;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+}
   .filter-options h2 {
-    padding-top: 1px; /* lily Add */
+    padding-top: 1px;
     margin: 0px 20px;
   }
 
-  /*filter-options*/
- 
   .filter-options {
     width: 100%;
     height: 60px;
     background-color: #3397DB;
     align-items: center;
-}
+  }
 
-.select-list {
-  display: flex;
-  flex-wrap: column;
-  align-items: center;
-}
+  .select-list {
+    display: flex;
+    flex-wrap: column;
+    align-items: center;
+  }
 
   /*filter-options select*/
-    .filter-options select {
-      height: 20px;
-      margin: 10px;
-      padding: 0 10px;
-      width: 130px;
+  .filter-options select {
+    height: 20px;
+    margin: 10px;
+    padding: 0 10px;
+    width: 130px;
+  }
+
+  /*restaurants-list */
+  #restaurants-list {
+    padding: 1px 10px 10px;
+  }
+
+  #restaurants-list li {
+    width: 250px;
+    min-height: 280px;
+  }
+
+  /*restaurant-img*/
+  #restaurants-list .restaurant-img {
+    min-height: 150px;
+    margin:20px 10px 0px 0px;
+  }
 }
 
-/*restaurants-list */
-#restaurants-list {
-  padding: 1px 10px 10px;
+#restaurants-list li a {
+  padding: 8px 30px 10px;
+  margin: 10px 0 0 30px;
 }
 
-#restaurants-list li {
-  width: 250px;
+#restaurant-container, #reviews-container {
+  width: 45%;
 }
 
-/*restaurant-img*/
-.restaurant-img {
-  margin: 0;
-  max-width: 100%;
-  min-height: 100px;
-}
+.inside #map-container {
+  top: 100px;
+  width: 45%;
 }
 
-@media screen and (min-width:725px) {
+#map {
+  height: 200px;
+}
 
+.inside #footer {
+  width: 40%;
+}
+
+/* ====================== min-width:776px  Lily Add====================== */
+@media screen and (min-width:776px) {
   .filter-options select {
     width: 200px;
   }
+
   #restaurants-list {
     margin: 0;
     padding: 30px 15px 60px;
-    text-align: center;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content:space-around;
   }
+
   #restaurants-list li {
-
-    margin: 15px;
-    min-height: 380px;
-    padding: 0 30px 25px;
-    text-align: left;
+    margin: 10px;
     width: 270px;
+    min-height: 280px;
   }
+
   #restaurants-list .restaurant-img {
-
-    min-height: 248px;
-    min-width: 100%;
+    margin:20px 10px 0px 0px;
+    min-height: 160px;
   }
-  #restaurants-list li h1 {
 
+  #restaurants-list li h1 {
     line-height: 1.3;
     margin: 20px 0 10px;
- 
   }
+
   #restaurants-list p {
     margin: 0;
     font-size: 11pt;
   }
-  #restaurants-list li a {
 
-    margin: 15px 0 0;
+  #restaurants-list li a {
     padding: 8px 30px 10px;
-    text-align: center;
-    text-decoration: none;
-    text-transform: uppercase;
+    margin: 10px 0 0 60px;
   }
 
+  .inside #map-container {
+    top: 100px;
+    width: 45%;
+}
 }
