--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ td,
 th,
 p {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 12pt;
+  font-size: 10pt;
   color: #333;
   line-height: 1.5;
 }
@@ -189,15 +189,16 @@ nav h1 a {
 }
 
 #restaurants-list li {
-  /*display: inline-block;*/
+  display: inline-block;
   background-color: #fff;
+  position: relative;
   border: 2px solid #ccc;
   font-family: Arial, sans-serif;
   margin: 15px;
   min-height: 380px;
   padding: 0 10px 25px;
   text-align: left;
-  /*max-width: 300px;*/
+  max-width: 300px;
   width: 85%;
 }
 
@@ -213,7 +214,7 @@ nav h1 a {
 #restaurants-list li h1 {
   color: #f18200;
   font-family: Arial, sans-serif;
-  font-size: 14pt;
+  font-size: 10pt;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
@@ -223,7 +224,7 @@ nav h1 a {
 
 #restaurants-list p {
   margin: 0;
-  font-size: 11pt;
+  font-size: 10pt;
 }
 
 #restaurants-list li a {
@@ -237,6 +238,7 @@ nav h1 a {
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
+  position: absolute;
   bottom: 20px;
   left: 0;
   right: 0;
@@ -389,18 +391,17 @@ nav h1 a {
     width: 130px;
   }
   #restaurants-list li a {
-    margin: 8px 10px 10px 40px;
+    margin: auto;
   }
   
   #restaurants-list {
     padding: 1px 10px 10px;
   }
 
-  #restaurants-list li {
-    /*width: 40%;*/
+   /*#restaurants-list li {
+   width: 40%;
     min-width: 200px;
-    min-height: 280px;
-  }
+  }*/
 
   #restaurants-list .restaurant-img {
   /*  max-height: 150px;*/
